--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
 
 <body>
   <div id="root"></div>
-  
+
 </body>
 <script>
-    
+
   let tg = window.Telegram.WebApp
   tg.expand()
   window.addEventListener('touchmove', (e) => e.preventDefault(), { passive: false })
@@ -42,32 +42,32 @@
   }
 
   // margin-top 100px & padding=bottom 100px
-  // const overflow = 0
-  // document.body.style.overflowY = 'hidden'
-  // document.body.style.marginTop = `${overflow}px`
-  // document.body.style.height = window.innerHeight + overflow + 'px'
-  // document.body.style.paddingBottom = `${overflow}px`
-  // window.scrollTo(0, overflow)
+  const overflow = 0
+  document.body.style.overflowY = 'hidden'
+  document.body.style.marginTop = `${overflow}px`
+  document.body.style.height = window.innerHeight + overflow + 'px'
+  document.body.style.paddingBottom = `${overflow}px`
+  window.scrollTo(0, overflow)
 
-  // const scrollableEl = document.querySelector('.scrollable')
-  // let ts
-  // const onTouchStart = (e) => {
-  //   ts = e.touches[0].clientY
-  // }
-  // const onTouchMove = (e) => {
-  //   if (scrollableEl) {
-  //     const scroll = scrollableEl.scrollTop
-  //     const te = e.changedTouches[0].clientY
-  //     if (scroll <= 0 && ts < te) {
-  //       e.preventDefault()
-  //     }
-  //   } else {
-  //     e.preventDefault()
-  //   }
-  // }
-  // document.documentElement.addEventListener('touchstart', onTouchStart, { passive: false })
-  // document.documentElement.addEventListener('touchmove', onTouchMove, { passive: false });
-  
+  const scrollableEl = document.querySelector('.scrollable')
+  let ts
+  const onTouchStart = (e) => {
+    ts = e.touches[0].clientY
+  }
+  const onTouchMove = (e) => {
+    if (scrollableEl) {
+      const scroll = scrollableEl.scrollTop
+      const te = e.changedTouches[0].clientY
+      if (scroll <= 0 && ts < te) {
+        e.preventDefault()
+      }
+    } else {
+      e.preventDefault()
+    }
+  }
+  document.documentElement.addEventListener('touchstart', onTouchStart, { passive: false })
+  document.documentElement.addEventListener('touchmove', onTouchMove, { passive: false });
+
 </script>
 
 </html>
