--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no viewport-fit=cover" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Not just a leader, but a king of memes & a billionaire 💰 Tap2Earn now!" />
+  <meta http-equiv="Content-Security-Policy" content="clipboard-write 'self'">
+  <meta http-equiv="Permissions-Policy" content="clipboard-write=(self)">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Tiger</title>
